syntax.output
Terminals unused in grammar

   WHITE
   DIGIT
   LETTER
   REOF
   ERROR


State 31 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI
    9       | Specifier error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag
   16                | STRUCT OptTag LC error RC

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC
   30       | error RC
   31       | LC error

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | error SEMI
   41     | RETURN error SEMI

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | Specifier error SEMI

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp
   50    | VarDec ASSIGNOP error

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | error RP
   70    | error RB

   71 Args: Exp COMMA Args
   72     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 16 22 25 30 31 40 41 45 50 69 70
WHITE (258)
DIGIT (259)
LETTER (260)
SEMI (261) 4 5 7 8 9 34 36 40 41 44 45
COMMA (262) 11 26 47 71
ASSIGNOP (263) 49 50 51
RELOP (264) 54
PLUS (265) 55
MINUS (266) 56 60
STAR (267) 57
DIV (268) 58
AND (269) 52
OR (270) 53
DOT (271) 65
NOT (272) 61
TYPE (273) 12
LP (274) 23 24 37 38 39 59 62 63
RP (275) 23 24 25 37 38 39 59 62 63 69
LB (276) 21 64
RB (277) 21 22 64 70
LC (278) 14 16 29 31
RC (279) 14 16 29 30
STRUCT (280) 14 15 16
RETURN (281) 36 41
IF (282) 37 38
ELSE (283) 38
WHILE (284) 39
INT (285) 21 67
FLOAT (286) 68
ID (287) 17 19 20 23 24 62 63 65 66
REOF (288)
ERROR (289)
L_MINUS (290)
LOWER_THAN_ELSE (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
Program (38)
    on left: 1, on right: 0
ExtDefList (39)
    on left: 2 3, on right: 1 2
ExtDef (40)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (41)
    on left: 10 11, on right: 4 11
Specifier (42)
    on left: 12 13, on right: 4 5 6 7 9 28 44 45
StructSpecifier (43)
    on left: 14 15 16, on right: 13
OptTag (44)
    on left: 17 18, on right: 14 16
Tag (45)
    on left: 19, on right: 15
VarDec (46)
    on left: 20 21 22, on right: 10 11 21 28 48 49 50
FunDec (47)
    on left: 23 24 25, on right: 6 7
VarList (48)
    on left: 26 27, on right: 23 26
ParamDec (49)
    on left: 28, on right: 26 27
CompSt (50)
    on left: 29 30 31, on right: 6 35
StmtList (51)
    on left: 32 33, on right: 29 32
Stmt (52)
    on left: 34 35 36 37 38 39 40 41, on right: 32 37 38 39
DefList (53)
    on left: 42 43, on right: 14 29 42
Def (54)
    on left: 44 45, on right: 42
DecList (55)
    on left: 46 47, on right: 44 47
Dec (56)
    on left: 48 49 50, on right: 46 47
Exp (57)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70, on right: 34 36 37 38 39 49 51 52 53 54 55 56 57 58 59 60
    61 64 65 71 72
Args (58)
    on left: 71 72, on right: 62 71


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag
   16                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    9       | Specifier . error SEMI

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC
   16                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 21


State 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    9 ExtDef: Specifier error . SEMI
   22 VarDec: error . RB
   25 FunDec: error . RP

    SEMI  shift, and go to state 22
    RP    shift, and go to state 23
    RB    shift, and go to state 24


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

   20 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP

    LP  shift, and go to state 25

    $default  reduce using rule 20 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


State 19

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 27
    LB     shift, and go to state 28

    $default  reduce using rule 10 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 29
    SEMI   shift, and go to state 30
    LC     shift, and go to state 31

    CompSt  go to state 32


State 21

   14 StructSpecifier: STRUCT OptTag LC . DefList RC
   16                | STRUCT OptTag LC . error RC

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 43 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 35
    Def              go to state 36


State 22

    9 ExtDef: Specifier error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 23

   25 FunDec: error RP .

    $default  reduce using rule 25 (FunDec)


State 24

   22 VarDec: error RB .

    $default  reduce using rule 22 (VarDec)


State 25

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 37
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 39
    ParamDec         go to state 40


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

   11 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 41
    ID     shift, and go to state 42

    ExtDecList  go to state 43
    VarDec      go to state 19


State 28

   21 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 44


State 29

   30 CompSt: error . RC

    RC  shift, and go to state 45


State 30

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 31

   29 CompSt: LC . DefList StmtList RC
   31       | LC . error

    error   shift, and go to state 46
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 43 (DefList)]
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 36


State 32

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 33

   16 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 48


State 34

   44 Def: Specifier . DecList SEMI
   45    | Specifier . error SEMI

    error  shift, and go to state 49
    ID     shift, and go to state 42

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


State 35

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 53


State 36

   42 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 54
    Def              go to state 36


State 37

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 38

   28 ParamDec: Specifier . VarDec

    error  shift, and go to state 41
    ID     shift, and go to state 42

    VarDec  go to state 55


State 39

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 56


State 40

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 57

    $default  reduce using rule 27 (VarList)


State 41

   22 VarDec: error . RB

    RB  shift, and go to state 24


State 42

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 43

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 44

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 58


State 45

   30 CompSt: error RC .

    $default  reduce using rule 30 (CompSt)


State 46

   31 CompSt: LC error .

    $default  reduce using rule 31 (CompSt)


State 47

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 31
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65
    INT     shift, and go to state 66
    FLOAT   shift, and go to state 67
    ID      shift, and go to state 68

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 70
    Stmt      go to state 71
    Exp       go to state 72


State 48

   16 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 16 (StructSpecifier)


State 49

   22 VarDec: error . RB
   45 Def: Specifier error . SEMI

    SEMI  shift, and go to state 73
    RB    shift, and go to state 24


State 50

   21 VarDec: VarDec . LB INT RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp
   50    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 74
    LB        shift, and go to state 28

    $default  reduce using rule 48 (Dec)


State 51

   44 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 75


State 52

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 76

    $default  reduce using rule 46 (DecList)


State 53

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 54

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 55

   21 VarDec: VarDec . LB INT RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 28

    $default  reduce using rule 28 (ParamDec)


State 56

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 57

   26 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 77
    ParamDec         go to state 40


State 58

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 59

   30 CompSt: error . RC
   40 Stmt: error . SEMI
   69 Exp: error . RP
   70    | error . RB

    SEMI  shift, and go to state 78
    RP    shift, and go to state 79
    RB    shift, and go to state 80
    RC    shift, and go to state 45


State 60

   60 Exp: MINUS . Exp

    error  shift, and go to state 81
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 82


State 61

   61 Exp: NOT . Exp

    error  shift, and go to state 81
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 83


State 62

   59 Exp: LP . Exp RP

    error  shift, and go to state 81
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 84


State 63

   36 Stmt: RETURN . Exp SEMI
   41     | RETURN . error SEMI

    error  shift, and go to state 85
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 86


State 64

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 87


State 65

   39 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 88


State 66

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 67

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 68

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .

    LP  shift, and go to state 89

    $default  reduce using rule 66 (Exp)


State 69

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


State 70

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 90


State 71

   32 StmtList: Stmt . StmtList

    error   shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 31
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65
    INT     shift, and go to state 66
    FLOAT   shift, and go to state 67
    ID      shift, and go to state 68

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 91
    Stmt      go to state 71
    Exp       go to state 72


State 72

   34 Stmt: Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    SEMI      shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    RELOP     shift, and go to state 94
    PLUS      shift, and go to state 95
    MINUS     shift, and go to state 96
    STAR      shift, and go to state 97
    DIV       shift, and go to state 98
    AND       shift, and go to state 99
    OR        shift, and go to state 100
    DOT       shift, and go to state 101
    LB        shift, and go to state 102


State 73

   45 Def: Specifier error SEMI .

    $default  reduce using rule 45 (Def)


State 74

   49 Dec: VarDec ASSIGNOP . Exp
   50    | VarDec ASSIGNOP . error

    error  shift, and go to state 103
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68

    Exp  go to state 104


State 75

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 76

   47 DecList: Dec COMMA . DecList

    error  shift, and go to state 41
    ID     shift, and go to state 42

    VarDec   go to state 50
    DecList  go to state 105
    Dec      go to state 52


State 77

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 78

   40 Stmt: error SEMI .

    $default  reduce using rule 40 (Stmt)


State 79

   69 Exp: error RP .

    $default  reduce using rule 69 (Exp)


State 80

   70 Exp: error RB .

    $default  reduce using rule 70 (Exp)


State 81

   69 Exp: error . RP
   70    | error . RB

    RP  shift, and go to state 79
    RB  shift, and go to state 80


State 82

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    DOT  shift, and go to state 101
    LB   shift, and go to state 102

    $default  reduce using rule 60 (Exp)


State 83

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    DOT  shift, and go to state 101
    LB   shift, and go to state 102
